RbA Build/src/objects/Refund__c.object
<CustomObject>
    <description>Used to track refunds issued for customer payments</description>
    <fields>
        <fullName>Amount_Negative__c</fullName>
        <formula>Amount__c *-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Negative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount refunded</description>
        <inlineHelpText>The amount refunded</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer that was issued this refund.</description>
        <inlineHelpText>The customer that was issued this refund.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Contacts</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the refund was issued.</description>
        <inlineHelpText>The date the refund was issued.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>More details of the refund and why it was issued.</description>
        <inlineHelpText>More details of the refund and why it was issued.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Method__c</fullName>
        <description>The method in which the refund was given.</description>
        <inlineHelpText>The method in which the refund was given.</inlineHelpText>
        <label>Refund Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH - Greensky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH - Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH - Enerbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH - Kilowatt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_to_Baan_Date__c</fullName>
        <label>Sent to Baan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>

    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Refund_Order_Non_Sufficient_Funds</fullName>
        <active>false</active>
        <description>If there is a non-sufficient funds amount on the order, a refund cannot be issued.</description>
        <errorConditionFormula>Order__r.Non_Sufficient_Funds__c &gt; 0</errorConditionFormula>
        <errorMessage>You cannot submit a refund on this order, because there is a payment with non-sufficient funds.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Refund_Amount_Must_Be_Positive_Number</fullName>
        <active>true</active>
        <description>Refund Amount Must Be Positive Number</description>
        <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The refund amount must be a positive number.</errorMessage>
    </validationRules>
</CustomObject>